added bot for contacting

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								<div class="product-item">
 									<figure class="product-style">
 										<img src="images/AbstractGanesh.jpg" alt="Books" class="product-item">
-										<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+										<button type="button"  class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 											Cart</button>
 									</figure>
 									<figcaption>
@@ -132,7 +132,7 @@
 								<div class="product-item">
 									<figure class="product-style">
 										<img src="images/RadhaKrish.jpg" alt="Books" class="product-item">
-										<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+										<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 											Cart</button>
 									</figure>
 									<figcaption>
@@ -147,7 +147,7 @@
 								<div class="product-item">
 									<figure class="product-style">
 										<img src="images/Krishna.jpg" alt="Books" class="product-item">
-										<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+										<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 											Cart</button>
 									</figure>
 									<figcaption>
@@ -162,7 +162,7 @@
 								<div class="product-item">
 									<figure class="product-style">
 										<img src="images/Hanuman.jpg" alt="Books" class="product-item">
-										<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+										<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 											Cart</button>
 									</figure>
 									<figcaption>
@@ -250,11 +250,9 @@
 
 					<ul class="tabs">
 						<li data-tab-target="#all-genre" class="active tab">All Genre</li>
-						<li data-tab-target="#business" class="tab">Business</li>
-						<li data-tab-target="#technology" class="tab">Technology</li>
-						<li data-tab-target="#romantic" class="tab">Romantic</li>
-						<li data-tab-target="#adventure" class="tab">Adventure</li>
-						<li data-tab-target="#fictional" class="tab">Fictional</li>
+						<li data-tab-target="#sacral" class="tab">Sacral</li>
+						<li data-tab-target="#potraits" class="tab">Potraits</li>
+
 					</ul>
 
 					<div class="tab-content">
@@ -265,7 +263,7 @@
 									<div class="product-item">
 										<figure class="product-style">
 											<img src="images/AbstractGanesh.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -279,8 +277,8 @@
 								<div class="col-md-3">
 									<div class="product-item">
 										<figure class="product-style">
-											<img src="images/tab-item2.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<img src="images/AbstractGirl.jpg" alt="Books" class="product-item">
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -294,8 +292,8 @@
 								<div class="col-md-3">
 									<div class="product-item">
 										<figure class="product-style">
-											<img src="images/tab-item3.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<img src="images/Hanuman.jpg" alt="Books" class="product-item">
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -309,8 +307,8 @@
 								<div class="col-md-3">
 									<div class="product-item">
 										<figure class="product-style">
-											<img src="images/tab-item4.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<img src="images/Krishna.jpg" alt="Books" class="product-item">
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -327,8 +325,8 @@
 								<div class="col-md-3">
 									<div class="product-item">
 										<figure class="product-style">
-											<img src="images/tab-item5.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<img src="images/RadhaKrish.jpg" alt="Books" class="product-item">
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -338,67 +336,22 @@
 										</figcaption>
 									</div>
 								</div>
-
-								<div class="col-md-3">
-									<div class="product-item">
-										<figure class="product-style">
-											<img src="images/tab-item6.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
-												Cart</button>
-										</figure>
-										<figcaption>
-											<h3>Great travel at desert</h3>
-											<span>Sanchit Howdy</span>
-											<div class="item-price">$ 40.00</div>
-										</figcaption>
-									</div>
-								</div>
-
-								<div class="col-md-3">
-									<div class="product-item">
-										<figure class="product-style">
-											<img src="images/tab-item7.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
-												Cart</button>
-										</figure>
-										<figcaption>
-											<h3>Life among the pirates</h3>
-											<span>Armor Ramsey</span>
-											<div class="item-price">$ 40.00</div>
-										</figcaption>
-									</div>
-								</div>
-
-								<div class="col-md-3">
-									<div class="product-item">
-										<figure class="product-style">
-											<img src="images/tab-item8.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
-												Cart</button>
-										</figure>
-										<figcaption>
-											<h3>Simple way of piece life</h3>
-											<span>Armor Ramsey</span>
-											<div class="item-price">$ 40.00</div>
-										</figcaption>
-									</div>
-								</div>
-
 							</div>
 
 						</div>
-						<div id="business" data-tab-content>
-							<div class="row">
+						<div id="sacral" data-tab-content>
+						<div class="row">
+
 								<div class="col-md-3">
 									<div class="product-item">
 										<figure class="product-style">
-											<img src="images/tab-item2.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<img src="images/AbstractGanesh.jpg" alt="Books" class="product-item">
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
-											<h3>Peaceful Enlightment</h3>
-											<span>Marmik Lama</span>
+											<h3>Portrait photography</h3>
+											<span>Adam Silber</span>
 											<div class="item-price">$ 40.00</div>
 										</figcaption>
 									</div>
@@ -407,13 +360,28 @@
 								<div class="col-md-3">
 									<div class="product-item">
 										<figure class="product-style">
-											<img src="images/tab-item4.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<img src="images/AbstractGirl.jpg" alt="Books" class="product-item">
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
-											<h3>Great travel at desert</h3>
-											<span>Sanchit Howdy</span>
+											<h3>Once upon a time</h3>
+											<span>Klien Marry</span>
+											<div class="item-price">$ 35.00</div>
+										</figcaption>
+									</div>
+								</div>
+
+								<div class="col-md-3">
+									<div class="product-item">
+										<figure class="product-style">
+											<img src="images/Hanuman.jpg" alt="Books" class="product-item">
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
+												Cart</button>
+										</figure>
+										<figcaption>
+											<h3>Tips of simple lifestyle</h3>
+											<span>Bratt Smith</span>
 											<div class="item-price">$ 40.00</div>
 										</figcaption>
 									</div>
@@ -422,28 +390,13 @@
 								<div class="col-md-3">
 									<div class="product-item">
 										<figure class="product-style">
-											<img src="images/tab-item6.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<img src="images/Krishna.jpg" alt="Books" class="product-item">
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
-											<h3>Life among the pirates</h3>
-											<span>Armor Ramsey</span>
-											<div class="item-price">$ 40.00</div>
-										</figcaption>
-									</div>
-								</div>
-
-								<div class="col-md-3">
-									<div class="product-item">
-										<figure class="product-style">
-											<img src="images/tab-item8.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
-												Cart</button>
-										</figure>
-										<figcaption>
-											<h3>Simple way of piece life</h3>
-											<span>Armor Ramsey</span>
+											<h3>Just felt from outside</h3>
+											<span>Nicole Wilson</span>
 											<div class="item-price">$ 40.00</div>
 										</figcaption>
 									</div>
@@ -452,67 +405,24 @@
 							</div>
 						</div>
 
-						<div id="technology" data-tab-content>
+						<div id="potraits" data-tab-content>
 							<div class="row">
+								
 								<div class="col-md-3">
 									<div class="product-item">
 										<figure class="product-style">
-											<img src="images/tab-item1.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<img src="images/AbstractGirl.jpg" alt="Books" class="product-item">
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
-											<h3>Peaceful Enlightment</h3>
-											<span>Marmik Lama</span>
-											<div class="item-price">$ 40.00</div>
+											<h3>Once upon a time</h3>
+											<span>Klien Marry</span>
+											<div class="item-price">$ 35.00</div>
 										</figcaption>
 									</div>
 								</div>
 
-								<div class="col-md-3">
-									<div class="product-item">
-										<figure class="product-style">
-											<img src="images/tab-item3.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
-												Cart</button>
-										</figure>
-										<figcaption>
-											<h3>Great travel at desert</h3>
-											<span>Sanchit Howdy</span>
-											<div class="item-price">$ 40.00</div>
-										</figcaption>
-									</div>
-								</div>
-
-								<div class="col-md-3">
-									<div class="product-item">
-										<figure class="product-style">
-											<img src="images/tab-item5.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
-												Cart</button>
-										</figure>
-										<figcaption>
-											<h3>Life among the pirates</h3>
-											<span>Armor Ramsey</span>
-											<div class="item-price">$ 40.00</div>
-										</figcaption>
-									</div>
-								</div>
-
-								<div class="col-md-3">
-									<div class="product-item">
-										<figure class="product-style">
-											<img src="images/tab-item7.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
-												Cart</button>
-										</figure>
-										<figcaption>
-											<h3>Simple way of piece life</h3>
-											<span>Armor Ramsey</span>
-											<div class="item-price">$ 40.00</div>
-										</figcaption>
-									</div>
-								</div>
 							</div>
 						</div>
 
@@ -522,7 +432,7 @@
 									<div class="product-item">
 										<figure class="product-style">
 											<img src="images/tab-item1.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -537,7 +447,7 @@
 									<div class="product-item">
 										<figure class="product-style">
 											<img src="images/tab-item3.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -552,7 +462,7 @@
 									<div class="product-item">
 										<figure class="product-style">
 											<img src="images/tab-item5.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -567,7 +477,7 @@
 									<div class="product-item">
 										<figure class="product-style">
 											<img src="images/tab-item7.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -586,7 +496,7 @@
 									<div class="product-item">
 										<figure class="product-style">
 											<img src="images/tab-item5.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -601,7 +511,7 @@
 									<div class="product-item">
 										<figure class="product-style">
 											<img src="images/tab-item7.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -620,7 +530,7 @@
 									<div class="product-item">
 										<figure class="product-style">
 											<img src="images/tab-item5.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -635,7 +545,7 @@
 									<div class="product-item">
 										<figure class="product-style">
 											<img src="images/tab-item7.jpg" alt="Books" class="product-item">
-											<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+											<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 												Cart</button>
 										</figure>
 										<figcaption>
@@ -677,7 +587,7 @@
 							<div class="product-item">
 								<figure class="product-style">
 									<img src="images/AbstractGanesh.jpg" alt="Books" class="product-item">
-									<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+									<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 										Cart</button>
 								</figure>
 								<figcaption>
@@ -692,7 +602,7 @@
 							<div class="product-item">
 								<figure class="product-style">
 									<img src="images/AbstractGirl.jpg" alt="Books" class="product-item">
-									<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+									<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 										Cart</button>
 								</figure>
 								<figcaption>
@@ -707,7 +617,7 @@
 							<div class="product-item">
 								<figure class="product-style">
 									<img src="images/Hanuman.jpg" alt="Books" class="product-item">
-									<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+									<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 										Cart</button>
 								</figure>
 								<figcaption>
@@ -722,7 +632,7 @@
 							<div class="product-item">
 								<figure class="product-style">
 									<img src="images/Krishna.jpg" alt="Books" class="product-item">
-									<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+									<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 										Cart</button>
 								</figure>
 								<figcaption>
@@ -737,7 +647,7 @@
 							<div class="product-item">
 								<figure class="product-style">
 									<img src="images/product-item2.jpg" alt="Books" class="product-item">
-									<button type="button" class="add-to-cart" data-product-tile="add-to-cart">Add to
+									<button type="button" class="add-to-cart" onclick="sendTelegramMessage()" data-product-tile="add-to-cart">Add to
 										Cart</button>
 								</figure>
 								<figcaption>
@@ -805,6 +715,8 @@
 			</div>
 		</div>
 	</div>
+		<script src="js/telegram.js"></script>
+
 
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
