--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 					<div class="col-md-2">
 						<div class="main-logo">
-							<a href="index.html"><img   src="images/logo.png" alt="logo"></a>
+							<a href="#"><img  src="images/Logo.png" alt="logo"></a>
 						</div>
 
 					</div>
